# code/backend/api-docs/api-docs.yaml
@@ -35,14 +35,14 @@ paths:
         "404":
           description: 'Profile not found '
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Profile updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserProfile'
+        "403":
+          description: forbiden o dont have permissions
   /api/games/{id}:
     get:
       tags:
@@ -61,14 +61,14 @@ paths:
         "404":
           description: Game not found
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Found the game
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/GameDetails'
+        "403":
+          description: forbiden o dont have permissions
     put:
       tags:
       - game-rest-controller
@@ -215,14 +215,14 @@ paths:
         "404":
           description: 'Game not found '
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "201":
           description: Game added to the cart
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserProfile'
+        "403":
+          description: forbiden o dont have permissions
     delete:
       tags:
       - user-rest-controller
@@ -247,37 +247,57 @@ paths:
         "404":
           description: 'Game not found '
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Game deleted to the cart
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserProfile'
+        "403":
+          description: forbiden o dont have permissions
   /api/users/:
     post:
       tags:
       - user-rest-controller
       summary: Register a new user
       operationId: register
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
+      parameters:
+      - name: name
+        in: query
         required: true
+        schema:
+          type: string
+      - name: lastName
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: mail
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: password
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: aboutMe
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "404":
           description: Not Found
-        "403":
-          description: forbiden o dont have permissions
         "201":
           description: User created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        "403":
+          description: forbiden o dont have permissions
   /api/reviews/{gameId}/{userId}:
     post:
       tags:
@@ -444,14 +464,14 @@ paths:
         "404":
           description: 'Purchase not found '
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Found the purchase
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserProfile'
+                $ref: '#/components/schemas/Purchase'
+        "403":
+          description: forbiden o dont have permissions
   /api/users/{userId}/moreCartGames/{page}:
     get:
       tags:
@@ -525,14 +545,14 @@ paths:
         "404":
           description: User not found
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Found the user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        "403":
+          description: forbiden o dont have permissions
   /api/users/{id}/imageProfile:
     get:
       tags:
@@ -551,12 +571,12 @@ paths:
         "404":
           description: image profile not found
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Found the image profile
           content:
             image/png: {}
+        "403":
+          description: forbiden o dont have permissions
   /api/users/recomended:
     get:
       tags:
@@ -653,6 +673,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Review'
+  /api/games/{id}/graphics:
+    get:
+      tags:
+      - game-rest-controller
+      summary: Get the graphics of a game
+      operationId: getGraphics
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "404":
+          description: Game not found
+          content: {}
+        "200":
+          description: Found the praphics of the game
+          content:
+            application/json:
+              schema:
+                type: array
+                format: int32
   /api/games/{id}/gameplayImage/{index}:
     get:
       tags:
@@ -810,14 +854,14 @@ paths:
         "404":
           description: Review not found
           content: {}
-        "403":
-          description: forbiden o dont have permissions
         "200":
           description: Review deleted
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Review'
+        "403":
+          description: forbiden o dont have permissions
 components:
   schemas:
     User:
@@ -827,8 +871,6 @@ components:
           type: integer
           format: int64
         mail:
-          type: string
-        encodedPassword:
           type: string
         name:
           type: string
@@ -948,6 +990,21 @@ components:
           type: string
         password:
           type: string
+    Purchase:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        games:
+          type: array
+          items:
+            $ref: '#/components/schemas/Game'
+        user:
+          $ref: '#/components/schemas/User'
+        date:
+          type: string
+          format: date
     GameDetails:
       type: object
       properties:
@@ -958,12 +1015,12 @@ components:
     PageReview:
       type: object
       properties:
-        totalPages:
-          type: integer
-          format: int32
         totalElements:
           type: integer
           format: int64
+        totalPages:
+          type: integer
+          format: int32
         size:
           type: integer
           format: int32
@@ -976,15 +1033,15 @@ components:
           format: int32
         sort:
           $ref: '#/components/schemas/Sort'
+        pageable:
+          $ref: '#/components/schemas/Pageable'
+        numberOfElements:
+          type: integer
+          format: int32
         first:
           type: boolean
         last:
           type: boolean
-        numberOfElements:
-          type: integer
-          format: int32
-        pageable:
-          $ref: '#/components/schemas/Pageable'
         empty:
           type: boolean
     Pageable:
